# labs-array-map-json

./: Cargo.toml  README.md  SmartModule.toml
src/: lib.rs
test-data/: input.json  simple.json
